--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,9 @@ typing-inspection==0.4.1
 typing_extensions==4.14.0
 urllib3==2.5.0
 uvicorn==0.23.2
+fastapi==0.115.2
+uvicorn==0.23.2
+jinja2==3.1.3
+openai==1.86.0
+requests==2.32.4
+python-dotenv==1.1.0
