--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,9 @@ jinja2==3.1.3
 openai==1.86.0
 requests==2.32.4
 python-dotenv==1.1.0
+fastapi==0.115.2
+uvicorn==0.23.2
+openai==1.86.0
+python-dotenv==1.1.0
+jinja2==3.1.3
+requests==2.32.4
